<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.UserDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_7sdp">

            <TextView
                android:id="@+id/usageStatisticsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usage_statistics"
                android:textColor="@color/app_theme_color"
                android:textSize="@dimen/_20ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:drawableLeft="@drawable/ic_bar_chart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_30sdp">

                <TextView
                    android:id="@+id/totalHikesTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_hikes"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/totalHikesDataTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_hikes_yet"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="end"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_30sdp">

                <TextView
                    android:id="@+id/totalDistanceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_distance"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="start"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/totalDistanceDataTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="end"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/hikesChartTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hikes_chart_title"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barCharUserData"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_marginBottom="@dimen/_30sdp" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>